--- a/admin/layout/css/_wrapper.scss
+++ b/admin/layout/css/_wrapper.scss
@@ -1,15 +1,14 @@
 aside.wrapper{
-   float: right;
-   max-height: 595px ;
+   max-height: $mh ;
    width: 23%;
    overflow-y: auto;
    line-height: 10px;
-   margin-top: 41px;
+   margin-top: 39px;
+   
    ul.mainMenu{
-      padding: 0 2px;
       display: block;
-      border-radius: 20px;
       overflow: hidden;
+      
       li.item{
          border-top: 1px solid rgb(78, 174, 238);
          border-bottom: 1px solid rgb(116, 127, 134);
@@ -50,6 +49,7 @@ aside.wrapper{
                padding: 15px 60px 15px 15px;
                color: $c;
                font-size: 1em;
+               text-indent: S0px;
                border-bottom: 1px solid $mc;
                position: relative;
                &:before{
@@ -98,6 +98,9 @@ aside.wrapper{
                }
                &:last-child{
                   border:none;
+               }
+               i::after {
+                  content: '';
                }
             }
          }
