--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -8,10 +8,10 @@
   text-decoration: none;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  direction: rtl;
 }
 
 body {
-  direction: rtl;
   background-color: #f4f4f4;
   background-image: url("../imgs/station-01.jpg");
   background-repeat: repeat;
@@ -60,7 +60,7 @@ body {
 .LoginForm form h3 {
   text-align: center;
   color: #f0f0f0;
-  font-size: 5vmax;
+  font-size: 3em;
   text-shadow: 5px 5px 15px black;
 }
 
@@ -105,9 +105,6 @@ body {
   }
   .LoginForm img[alt="pump"] {
     display: none;
-  }
-  .LoginForm form h3 {
-    font-size: 10vw;
   }
   .LoginForm div {
     display: none;
@@ -629,30 +626,28 @@ section .container form span .swing:focus + label, section .container form span 
   z-index: 9;
 }
 
-section .container form .btn[name="btnSave"]::after {
-  content: "\270D";
-  top: -3px;
-}
-
-section .container form .btn[name="btnSave"]:hover #rebot {
-  visibility: visible;
-}
-
-section .container form .btn[name="btnDlt"]::before {
-  content: "\2704";
-  top: 0px;
-}
-
 section .container form button.btn {
   width: 40%;
   display: inline-block;
   font-weight: bolder;
   padding: 5px;
-  margin: 15px 4%;
-  border-radius: 25px;
+  margin: 10px 4%;
+  border-radius: 40% 10%;
+  border: 7px double #042331;
   outline: none;
   color: #ffffff;
   background-color: #0d86f0;
+  position: relative;
+}
+
+section .container form button.btn[name="btnSave"]::after {
+  content: "\270D";
+  position: absolute;
+  top: 0px;
+}
+
+section .container form button.btn[name="btnDlt"]::before {
+  content: " \2704 ";
 }
 
 footer.myfooter {
@@ -661,8 +656,8 @@ footer.myfooter {
   background-color: #0d86f0;
   bottom: 0;
   left: 1px;
-  width: 99.7%;
-  padding: 3px;
+  width: 100%;
+  padding: 3px 10px;
   border: 2px solid #111;
 }
 
@@ -671,12 +666,12 @@ footer.myfooter:hover {
   background-color: #000000;
 }
 
-.hiddenCol {
-  display: none;
+footer.myfooter label {
+  margin: 0 5px;
 }
 
-.dbl {
-  padding-right: 200px;
+.hiddenCol {
+  display: none;
 }
 
 a.active {
