--- a/admin/layout/css/backend.scss
+++ b/admin/layout/css/backend.scss
@@ -16,9 +16,10 @@ $s  : 1.3s ;
    list-style: none;
    text-decoration: none;
    box-sizing: border-box;
+   direction: rtl;
 }
 body {
-   direction: rtl;
+   
    background-color: #f4f4f4;
    background-image: url("../imgs/station-01.jpg");
    background-repeat: repeat;
@@ -53,7 +54,7 @@ body {
       h3 {
          text-align: center;
          color: rgb(240, 240, 240);
-         font-size: 5vmax;
+         font-size: 3em;
          text-shadow: 5px 5px 15px black; //rgb(0, 238, 255);
          &:hover {
             text-shadow: none;
@@ -94,9 +95,6 @@ body {
       }
       img[alt="pump"] {
          display: none;
-      }
-      form h3 {
-         font-size: 10vw;
       }
       div {
          display: none;
@@ -207,19 +205,19 @@ footer.myfooter {
    background-color: $bc;
    bottom: 0;
    left: 1px;
-   width: 99.7%;
-   padding: 3px;
+   width: 100%;
+   padding: 3px 10px;
    border: 2px solid #111;
    &:hover {
       color: $hc;
       background-color: $hbc;
    }
+   label {
+      margin: 0 5px;
+   }
 }
 .hiddenCol {
    display: none;
-}
-.dbl {
-   padding-right: 200px ;
 }
 a.active {
    background-color: $hbc;
@@ -230,26 +228,10 @@ option {
    color : purple ;
    line-height: 5em;
 }
-// /*
 
-//    @media (max-width:767px) {
-
-//    }
-//    @media (min-width:768px) {
-      
-//    }
-//    @media (min-width:992px) {
-      
-//    }
-//    @media (min-width:1200px) {
-      
-//    }
-
-
-//    .container .mTbl tr > *:nth-child(2) {
+// .mTbl tr > *:nth-child(2) {
 //    display: none;
 // }
-// */
 
 @media only print {
    .navbar , .wrapper , .myfooter {
